--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -20,7 +20,7 @@
   <form action="/course/{{ subject.slug }}" method="post">
     <div class="grid-row">
       <div class="column-two-thirds">
-        {{ macros.textbox(subject.slug + '-course-website', 'Course website', 'The page on your website with details about this course', 'form-control-full') }}
+        {{ macros.textbox(subject.slug + '-course-website', 'Course webpage (optional)', 'Enter the address of a page on your website with details about this course.', 'form-control-full') }}
       </div>
     </div>
 
