--- a/app/views/course/from-ucas.html
+++ b/app/views/course/from-ucas.html
@@ -20,10 +20,10 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p class="lede">
-        Course information that we’ve received from UCAS based on your submissions to them. This information can only be edited within UCAS.
+        Course information that we’ve received from UCAS based on your submissions to them. If you want to change it you’ll need to use UCAS web-link.
       </p>
 
-      <p>Multiple UCAS courses for the same subject are combined into a single subject page with different study options. For example courses with and without salary.</p>
+      <p>Multiple UCAS courses for the same subject are combined into a single subject page with different study options. For example, courses with and without a salary.</p>
     </div>
   </div>
 
@@ -39,7 +39,7 @@
           <dd>{{ course.providerCode }}</dd>
           <dt>Training programme code:</dt>
           <dd>{{ course.programmeCode }}</dd>
-          <dt>Accrediting provider:</dt>
+          <dt>Accredited provider:</dt>
           <dd>{{ course.accrediting }}</dd>
           <dt>Route:</dt>
           <dd>{{ course.route }}</dd>
