--- a/app/views/course/qualification-options.html
+++ b/app/views/course/qualification-options.html
@@ -18,9 +18,14 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <p class="lede">
-        Candidates can apply for a PGCE with QTS course or a QTS only one.
+      <p>
+        Candidates can apply for either of these:
       </p>
+      <ul class="list list-bullet">
+        <li>a QTS course</li>
+        <li>a PGCE with QTS course</li>
+      </ul>
+      <hr />
     </div>
   </div>
 
@@ -32,11 +37,7 @@
         {{ macros.textbox(subject.slug + '-pgce-with-qts-qual-fee', 'PGCE with QTS course fee', 'Fee in £', 'form-control-xsmall') }}
       </div>
       <div class="column-one-third add-margin-for-label">
-        <p>It could include:</p>
-        <ul class="list list-bullet">
-          <li>details about the PGCE aspect of the course</li>
-          <li>how your experience changes when choosing a PGCE</li>
-        </ul>
+        <p>Summarise what makes this course worth studying, compared to the QTS course. You could include which types of candidate benefits from this course.</p>
       </div>
     </div>
     <div class="grid-row">
@@ -45,11 +46,7 @@
         {{ macros.textbox(subject.slug + '-qts-qual-fee', 'QTS course fee', 'Fee in £', 'form-control-xsmall') }}
       </div>
       <div class="column-one-third add-margin-for-label">
-        <p>It could include:</p>
-        <ul class="list list-bullet">
-          <li>who is best suited to a QTS only course</li>
-          <li>how your experience changes without a PGCE</li>
-        </ul>
+        <p>Summarise what makes this course worth studying, compared to the PGCE with QTS course.</p>
       </div>
     </div>
 
