--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -144,8 +144,8 @@
   {% if (value(id)) %}
     <p>{{ value(id) }}</p>
   {% else %}
-    <p>
-      These details are missing.
+    <p class="missing-section">
+      Please add details for this section.
     </p>
   {% endif %}
 {% endmacro %}
