--- a/app/views/manage.html
+++ b/app/views/manage.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Manage teacher training courses' %}
+{% set title = 'Publish teacher training courses' %}
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
