--- a/app/views/course.html
+++ b/app/views/course.html
@@ -65,9 +65,9 @@
                 <div>
                   <dt class="course-part-label">
                     {% if subject.folded_course.accrediting | length == 1 %}
-                      Accrediting provider
+                      Accredited provider
                     {% else %}
-                      Accrediting providers
+                      Accredited providers
                     {% endif %}
                   </dt>
                   <dd class="course-part-value">
@@ -104,19 +104,20 @@
               </h3>
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/about-this-course">Edit</a>
               <dl class="course-part-tasks">
-                {{ macros.coursePart(subject.slug + '-course-website', 'Course website') }}
+                {{ macros.coursePart(subject.slug + '-course-website', 'Course webpage') }}
                 {{ macros.coursePart(subject.slug + '-about-this-course', 'About this course') }}
               </dl>
             </li>
             <li class="course-parts-item">
               <h3 class="course-part-task">
-                About this training provider
+                About your organisation
               </h3>
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/about-this-provider">Edit</a>
               <dl class="course-part-tasks">
+                {{ macros.coursePart(subject.slug + '-about-organisation', 'About your organisation') }}
                 {{ macros.coursePart(subject.slug + '-training-with-a-disability', 'Training with a disability') }}
                 {{ macros.coursePart(subject.slug + '-interview-process', 'Interview process') }}
-                {{ macros.coursePart(subject.slug + '-placement-school-policy', 'Placement school policy') }}
+                {{ macros.coursePart(subject.slug + '-placement-school-policy', 'Schools you’ll be placed at') }}
               </dl>
             </li>
             <li class="course-parts-item">
@@ -127,6 +128,7 @@
 
               <dl class="course-part-tasks">
                 {{ macros.coursePart(subject.slug + '-qualifications-required', 'Qualifications needed') }}
+                {{ macros.coursePart(subject.slug + '-personal-qualities', 'Personal qualities') }}
                 {{ macros.coursePart(subject.slug + '-other-requirements', 'Other requirements') }}
               </dl>
             </li>
@@ -151,7 +153,7 @@
               </h3>
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/salary-options">Edit</a>
               <dl class="course-part-tasks">
-                {{ macros.coursePart(subject.slug + '-salaried', 'Salaried teacher training') }}
+                {{ macros.coursePart(subject.slug + '-salaried', 'About a salaried course') }}
                 {{ macros.coursePart(subject.slug + '-salary', 'Salary available') }}
               </dl>
             </li>
