--- a/app/views/course/salary-options.html
+++ b/app/views/course/salary-options.html
@@ -19,7 +19,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p class="lede">
-        Candidates can apply for this course with or without a salary.
+        Explain how the candidate’s experience of a salaried course is different from an unsalaried course.
       </p>
     </div>
   </div>
@@ -27,11 +27,11 @@
   <form action="/course/{{ subject.slug }}" method="post">
     <div class="grid-row">
       <div class="column-two-thirds">
-        {{ macros.textarea(subject.slug + '-salaried', 'Salaried teacher training', 7, 'Help candidates understand how a course with salary differs to one without.') }}
+        {{ macros.textarea(subject.slug + '-salaried', 'About a salaried course', 7) }}
         {{ macros.textbox(subject.slug + '-salary', 'Salary', 'Salary in £', 'form-control-xsmall') }}
       </div>
       <div class="column-one-third add-margin-for-label-with-help">
-        <p>It could include:</p>
+        <p>You can include:</p>
         <ul class="list list-bullet">
           <li>time spent in the classroom</li>
           <li>who is best suited to this type of course</li>
