Change `about` section in preview
Avoid use of training provider term, it's disliked by providers and DfE.

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -146,7 +146,7 @@
           {% endfor %}
         </ul> -->
 
-        <h2 class="heading-medium" id="section-about-provider">About the training provider</h2>
+        <h2 class="heading-medium" id="section-about-provider">About {{ data['training-provider-name'] }}</h2>
         {{ macros.previewPart(subject.slug + '-about-organisation') }}
 
         <h3 class="heading-small">Training with a disability</h3>
