Add screenshots of QA journey

--- a/app/views/history/simplified-university-view/index.html
+++ b/app/views/history/simplified-university-view/index.html
@@ -22,6 +22,8 @@
         <li>hide accrediting provider</li>
         <li>don’t show any of the qualification or salary study option fields</li>
       </ul>
+
+      <p>We showed this to universities at the <a href="http://ucet.ac.uk/">UCET</a> June meetup. Each table was given a printout of the screens below, which some commented on.</p>
     </div>
   </div>
 
