--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/qa-draft">Draft of the QA process</a>
+      </h3>
+      <p>
+        Submit to QA and example pass and fail emails
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/school-direct-view">School Direct view</a>
       </h3>
       <p>
