--- a/app/views/history/school-direct-view/index.html
+++ b/app/views/history/school-direct-view/index.html
@@ -17,6 +17,8 @@
       <p>
         School Direct routes are the most complex. List schools, show multiple UCAS courses per subject, show folded course summary.
       </p>
+
+      <p>We tested this with West London Teaching School Alliance:<br /><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">research session</a>.</p>
     </div>
   </div>
 
