Tweak user journey with landing page

--- a/app/views/we-imported.html
+++ b/app/views/we-imported.html
@@ -13,14 +13,14 @@
         We’ve imported your training courses from UCAS
       </h1>
 
-      <p>We’ve found 24 courses.</p>
+      <p>We found {{ data['ucasCourses'].length }} courses belonging to {{ data['training-provider-name'] }}.</p>
 
-      <p>Before your courses show in search results we need you to add some further details.</p>
+      <p>Before you can publish your courses we need you to add some further details.</p>
 
-      <p class="add-double-bottom-margin">To add courses or change factual course information you’ll need to continue to use UCAS NetUpdate. Your changes on UCAS will be automatically imported here and we’ll let you know when they’re ready.</p>
+      <p class="add-double-bottom-margin">To add courses or change factual course information you’ll need to continue to use UCAS web-link. Your changes on UCAS will be automatically imported here and we’ll let you know when they’re ready.</p>
 
       <div class="form-group">
-        <a href="#" class="button">Continue</a>
+        <a href="/courses" class="button">Continue</a>
       </div>
     </div>
   </div>
