--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -12,6 +12,12 @@
     Courses
   </h1>
 
+  <div class="grid-row add-double-bottom-margin">
+    <div class="column-two-thirds">
+      <p class="lede">Multiple UCAS courses for the same subject are combined into a single subject page. For example, courses with and without a salary.</p>
+    </div>
+  </div>
+
       <ul class="listing-example">
         {% for result in data['subjects'] %}
           <li>
