--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -8,7 +8,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/courses" method="post">
+      <form action="/we-imported" method="post">
         <legend>
           <h1 class="heading-xlarge">
             Sign in
