--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,7 +14,7 @@
     <div class="content">
       <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
       <nav id="proposition-menu">
-        <a href="/manage" id="proposition-name">
+        <a href="/courses" id="proposition-name">
           {# Set serviceName in config.js. Use a block to override on a page. #}
           {% block service_name %}
             {% if serviceName %} {{ serviceName }} {% endif %}
@@ -22,11 +22,9 @@
         </a>
 
         <ul id="proposition-links">
-          <li><a href="/courses">Courses</a></li>
           <li><a href="/schools">Schools</a></li>
-          <!-- <li><a href="#">Default course</a></li> -->
           <li><a href="/organisation">Organisation</a></li>
-          <li><a href="#">Sign out</a></li>
+          <li><a href="#">Sign out ({{ data['training-provider-name']}})</a></li>
         </ul>
       </nav>
     </div>
