Add feedback based on Brighton meetup

--- a/app/views/history/school-direct-view/index.html
+++ b/app/views/history/school-direct-view/index.html
@@ -18,7 +18,7 @@
         School Direct routes are the most complex. List schools, show multiple UCAS courses per subject, show folded course summary.
       </p>
 
-      <p>We tested this with West London Teaching School Alliance:<br /><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">research session</a>.</p>
+      <p>We tested this with West London Teaching School Alliance:<br /><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">research session</a>. We also demoed it to groups of School Direct and SCITT providers in Brighton and Reading.</p>
     </div>
   </div>
 
@@ -30,13 +30,30 @@
 
   {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/school-direct-view/thumbnails/04-about-this-course.png', '/public/images/history/school-direct-view/04-about-this-course.png', '') }}
 
-  {{ macros.screenshot('About this training provider', 'about-this-training-provider', '/public/images/history/school-direct-view/thumbnails/05-about-this-training-provider.png', '/public/images/history/school-direct-view/05-about-this-training-provider.png', '') }}
+  {{ macros.screenshot('About this training provider', 'about-this-training-provider', '/public/images/history/school-direct-view/thumbnails/05-about-this-training-provider.png', '/public/images/history/school-direct-view/05-about-this-training-provider.png', '
+    <h3 class="heading-small remove-top-margin">Interview process</h3>
+    <p>Depending on the course the interview can be different. For a salaried course the school you’ll be training in will have a greater say over the applicant.</p>
+
+    <h3 class="heading-small">Placement schools</h3>
+    <p>This box is universally hated. It’s perhaps doing too much – combining pattern of placements, course structure and how you are placed.</p>
+    <p>Possible alternatives: "When you’ll spend time in a different school", "Schools you’ll train in"</p>
+  ') }}
 
   {{ macros.screenshot('Course requirements', 'course-requirements', '/public/images/history/school-direct-view/thumbnails/06-course-requirements.png', '/public/images/history/school-direct-view/06-course-requirements.png', '') }}
 
-  {{ macros.screenshot('Qualification', 'qualification', '/public/images/history/school-direct-view/thumbnails/07-qualification.png', '/public/images/history/school-direct-view/07-qualification.png', '') }}
+  {{ macros.screenshot('Qualification', 'qualification', '/public/images/history/school-direct-view/thumbnails/07-qualification.png', '/public/images/history/school-direct-view/07-qualification.png', '
+    <p>Qualification outcomes are more complex than this. For example:</p>
+    <ul class="list list-bullet">
+      <li>QTS with a PGCE top-up – top-ups can vary, eg alumni PGCE, this also affects fees</li>
+      <li>PGCE can vary, some have masters credits others don’t – sometimes you don’t get the PGCE if you fail the masters bit, sometimes that doesn’t matter</li>
+    </ul>
+  ') }}
 
-  {{ macros.screenshot('Salary', 'salary', '/public/images/history/school-direct-view/thumbnails/08-salary.png', '/public/images/history/school-direct-view/08-salary.png', '') }}
+  {{ macros.screenshot('Salary', 'salary', '/public/images/history/school-direct-view/thumbnails/08-salary.png', '/public/images/history/school-direct-view/08-salary.png', '
+    <p>The salary isn’t available. It’s based on the national teacher’s pay scale that isn’t published until later in the year.</p>
+    <p>Schools have also been applying that scale differently, eg prorata based on time in schools vs full time. Rules around this are unclear.</p>
+    <p>We need to remove the salary field and add guidance around how much salary there will be in existing box (eg setting against pay scale).</p>
+  ') }}
 
   {{ macros.screenshot('Preview', 'preview', '/public/images/history/school-direct-view/thumbnails/09-preview.png', '/public/images/history/school-direct-view/09-preview.png', '') }}
 
