Iterate salary fields
* Remove specific salary amount, not attainable, instead guidance on salary scale
* Add more guidance around types of things candidates need to know
* Rename field to match preview

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -181,8 +181,7 @@
               </h3>
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/salary-options">Edit</a>
               <dl class="course-part-tasks">
-                {{ macros.coursePart(subject.slug + '-salaried', 'About a salaried course') }}
-                {{ macros.coursePart(subject.slug + '-salary', 'Salary available') }}
+                {{ macros.coursePart(subject.slug + '-salaried', 'Earn a salary while you train') }}
               </dl>
             </li>
             {% endif %}
