--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -76,7 +76,7 @@
 
         <h2 class="heading-medium" id="section-salary-options">Earn a salary while you train</h2>
 
-        <p>You can choose to apply to earn a salary of £{{ data[subject.slug + '-salary'] }} for this course.</p>
+        <p>You can choose to apply to earn a salary for this course.</p>
 
         {{ macros.previewPart(subject.slug + '-salaried') }}
 
