--- a/app/views/course/salary-options.html
+++ b/app/views/course/salary-options.html
@@ -16,25 +16,20 @@
     Salary
   </h1>
 
-  <div class="grid-row">
-    <div class="column-two-thirds">
-      <p class="lede">
-        Explain how the candidate’s experience of a salaried course is different from an unsalaried course.
-      </p>
-    </div>
-  </div>
-
   <form action="/course/{{ subject.slug }}" method="post">
     <div class="grid-row">
       <div class="column-two-thirds">
-        {{ macros.textarea(subject.slug + '-salaried', 'About a salaried course', 7) }}
-        {{ macros.textbox(subject.slug + '-salary', 'Salary', 'Salary in £', 'form-control-xsmall') }}
+        {{ macros.textarea(subject.slug + '-salaried', 'Earn a salary while you train', 10) }}
       </div>
-      <div class="column-one-third add-margin-for-label-with-help">
+      <div class="column-one-third add-margin-for-label">
+        <p>Explain how the candidate’s experience of a salaried course is different from an unsalaried course.</p>
         <p>You can include:</p>
         <ul class="list list-bullet">
           <li>time spent in the classroom</li>
+          <li>time spent teaching</li>
           <li>who is best suited to this type of course</li>
+          <li>an indication of the salary scale</li>
+          <li>how a salaried course differs from a fee paying course</li>
         </ul>
       </div>
     </div>
