--- a/app/views/history/school-direct-view/index.html
+++ b/app/views/history/school-direct-view/index.html
@@ -18,7 +18,7 @@
         School Direct routes are the most complex. List schools, show multiple UCAS courses per subject, show folded course summary.
       </p>
 
-      <p>We tested this with West London Teaching School Alliance:<br /><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">research session</a>. We also demoed it to groups of School Direct and SCITT providers in Brighton and Reading.</p>
+      <p>We tested this with West London Teaching School Alliance:<br /><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">research session</a>. We also demoed it to groups of School Direct and SCITT providers in Brighton and Reading. Some provider user needs have been derived from these sessions: <a href="https://docs.google.com/document/d/1Jb5uDZBnSFGcCdl3gAF9ggAo1klsEWL-KeSIGGLJpBE/edit">provider user needs</a></p>
     </div>
   </div>
 
