Iterate school placements copy

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -145,7 +145,7 @@
                 {{ macros.coursePart(subject.slug + '-about-organisation', 'About your organisation') }}
                 {{ macros.coursePart(subject.slug + '-training-with-a-disability', 'Training with a disability') }}
                 {{ macros.coursePart(subject.slug + '-interview-process', 'Interview process') }}
-                {{ macros.coursePart(subject.slug + '-placement-school-policy', 'Schools you’ll be placed at') }}
+                {{ macros.coursePart(subject.slug + '-placement-school-policy', 'How school placements work') }}
               </dl>
             </li>
             <li class="course-parts-item">
