--- a/app/views/course/about-this-provider.html
+++ b/app/views/course/about-this-provider.html
@@ -49,14 +49,14 @@
 
     <div class="grid-row">
       <div class="column-two-thirds">
-        {{ macros.textarea(subject.slug + '-placement-school-policy', 'Schools you’ll be placed at', 7) }}
+        {{ macros.textarea(subject.slug + '-placement-school-policy', 'How school placements work', 7) }}
       </div>
       <div class="column-one-third add-margin-for-label">
         <p>Summarise:</p>
         <ul class="list list-bullet">
-          <li>how a candidate’s placement schools will be selected</li>
-          <li>how they’ll spend their time (for example, 3 days per week in a placement, 2 days a week at the training location)</li>
-          <li>the number of schools to choose from (can be approximate if there are more than a dozen)</li>
+          <li>the number of placements a candidate will go on</li>
+          <li>the time candidates spend in each school</li>
+          <li>how schools are chosen based on the candidate’s needs</li>
         </ul>
       </div>
     </div>
