Add screenshots for Kingston School Direct

--- a/app/views/history/school-direct-view/index.html
+++ b/app/views/history/school-direct-view/index.html
@@ -19,6 +19,8 @@
       </p>
 
       <p>We tested this with West London Teaching School Alliance:<br /><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">research session</a>. We also demoed it to groups of School Direct and SCITT providers in Brighton and Reading. Some provider user needs have been derived from these sessions: <a href="https://docs.google.com/document/d/1Jb5uDZBnSFGcCdl3gAF9ggAo1klsEWL-KeSIGGLJpBE/edit">provider user needs</a></p>
+
+      <p>An iteration of this was tested with <a href="/history/kingston-school-direct">Kingston School Direct</a></p>
     </div>
   </div>
 
