Add read only screenshots

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/read-only">Draft of a read only version</a>
+      </h3>
+      <p>
+        An initial pass at what a read only view of the service will look like.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/qa-draft">Draft of the QA process</a>
       </h3>
       <p>
