Add link to Kingston video

--- a/app/views/history/kingston-school-direct/index.html
+++ b/app/views/history/kingston-school-direct/index.html
@@ -12,6 +12,12 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p><a href="https://lookback.io/watch/FoHoHPQF7B5TwrFkw">Research video</a></p>
+    </div>
+  </div>
+
   {{ macros.screenshot('Courses', 'courses', '/public/images/history/kingston-school-direct/thumbnails/01-courses.png', '/public/images/history/kingston-school-direct/01-courses.png', '') }}
 
   {{ macros.screenshot('Course', 'course', '/public/images/history/kingston-school-direct/thumbnails/02-course.png', '/public/images/history/kingston-school-direct/02-course.png', '') }}
