--- a/app/views/course/about-this-provider.html
+++ b/app/views/course/about-this-provider.html
@@ -8,8 +8,8 @@
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs">
     <ol>
-      <li><a href="/courses">{{ data['training-provider-name'] }}</a></li>
-      <li><a href="/course/{{ subject.slug or '/maths' }}">{{ subject.name or 'Maths' }}</a></li>
+      <li><a href="/courses">Courses</a></li>
+      <li><a href="/course/{{ accrediting.slug }}/{{ subject.slug or '/maths' }}">{{ subject.name or 'Maths' }} – {{ accrediting.name }}</a></li>
     </ol>
   </div>
 
@@ -20,44 +20,30 @@
   <form action="/course/{{ subject.slug }}" method="post">
     <div class="grid-row">
       <div class="column-two-thirds">
-        {{ macros.textarea(subject.slug + '-about-organisation', 'About your organisation', 14) }}
+        <p>This section is your opportunity to tell applicants why they should train with you. You could consider giving answers to the following questions:</p>
+
+        <ul class="list list-bullet">
+          <li>advantages of you as a training provider (please include evidence)</li>
+          <li>benefits of your chosen accredited provider</li>
+        </ul>
+        {{ macros.textarea(subject.slug + '-about-organisation', 'Training with ' + data['training-provider-name'], 14) }}
       </div>
     </div>
 
     <div class="grid-row">
       <div class="column-two-thirds">
+        {{ macros.textarea(subject.slug + '-about-accrediting-provider', 'About the accrediting provider', 4) }}
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="grid-row">
+      <div class="column-two-thirds">
+        <h3 class="heading-large remove-top-margin">Training with a disability</h3>
+        <p>Bearing in mind the broad range of disabilities that applicants may have (for example, physical, hearing and visual impairments, or dyslexia), summarise the accessibility of your course. If this varies between placement schools, please explain.</p>
+
         {{ macros.textarea(subject.slug + '-training-with-a-disability', 'Training with a disability', 14) }}
-      </div>
-      <div class="column-one-third add-margin-for-label">
-        <p>Summarise how this course is accessible for disabled people. Think about the broad range of disabilities that people can have - for example, dyslexia or physical, hearing or visual impairments. </p>
-      </div>
-    </div>
-
-    <div class="grid-row">
-      <div class="column-two-thirds">
-        {{ macros.textarea(subject.slug + '-interview-process', 'Interview process', 7) }}
-      </div>
-      <div class="column-one-third add-margin-for-label">
-        <p>Summarise the interview process that the applicant can expect. For example:</p>
-        <ul class="list list-bullet">
-          <li>who’ll be interviewing them</li>
-          <li>the number of interviews they can expect</li>
-          <li>the types of tests they'll have</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="grid-row">
-      <div class="column-two-thirds">
-        {{ macros.textarea(subject.slug + '-placement-school-policy', 'How school placements work', 7) }}
-      </div>
-      <div class="column-one-third add-margin-for-label">
-        <p>Summarise:</p>
-        <ul class="list list-bullet">
-          <li>the number of placements a candidate will go on</li>
-          <li>the time candidates spend in each school</li>
-          <li>how schools are chosen based on the candidate’s needs</li>
-        </ul>
       </div>
     </div>
 
