--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -9,7 +9,7 @@
 
   <h1 class="heading-xlarge">
     <span class="heading-secondary">{{ data['training-provider-name'] }}</span>
-    Courses
+    Courses by accrediting provider
   </h1>
 
   <div class="grid-row add-double-bottom-margin">
@@ -18,43 +18,19 @@
     </div>
   </div>
 
-      <ul class="listing-example">
-        {% for result in data['subjects'] %}
-          <li>
-            <div class="heading-medium remove-top-margin">
-              <a href="/course/{{ result.slug }}">{{ result.name }}</a>
-            </div>
-
-            {#
-            {% for variant in result.variants %}
-              <h4 class="heading-small add-bottom-margin add-top-margin">
-                {{ variant.title }}
-              </h4>
-              <table class="add-double-bottom-margin">
-                <thead>
-                  <tr>
-                    <th>School</th>
-                    <th>Course code</th>
-                    <th>Vacancies</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for school in variant.schools %}
-                  <tr>
-                    <td>{{ school.name }}</td>
-                    <td>{{ variant.code }}</td>
-                    <td>{{ school.vacancies }}</td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-            {% endfor %}
-            #}
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
+  {% for accrediting in data['accreditors'] %}
+    <h3 class="heading-medium">
+      <!-- <span style="color: #777; font-weight: normal">Accrediting provider</span><br /> -->
+      {{ accrediting.name }}
+    </h3>
+    <ul class="list listing-example">
+      {% for result in accrediting.subjects %}
+        <li>
+          <a href="/course/{{ accrediting.slug}}/{{ result.slug }}">{{ result.name }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endfor %}
 </main>
 
 {% endblock %}
